Fix navbar alignment

--- a/src/layout/_navbar.scss
+++ b/src/layout/_navbar.scss
@@ -67,6 +67,7 @@
 $menu-height-small: 3.375rem;
 $menu-height-large: 3.75rem;
 $min-height: 40px;
+$navbar-default-height: 60px;
 
 .top-navigation {
   position: fixed;
@@ -99,7 +100,14 @@ $min-height: 40px;
     color: $white;
   }
 
+  .donate-nav-item {
+    line-height: 1;
+    height: $navbar-default-height;
+  }
+
   .btn-donate {
+    margin-top: 10px;
+    height: 40px;
     color: $grey;
   }
 
@@ -223,6 +231,7 @@ $min-height: 40px;
     position: static;
     width: auto;
     text-align: left;
+    line-height: 1;
   }
 
   &:focus {
@@ -503,6 +512,7 @@ $min-height: 40px;
   }
 
   @include large-and-up {
+    height: $navbar-default-height;
     position: relative;
     max-width: 20%;
     width: 400px;
@@ -529,14 +539,14 @@ $min-height: 40px;
     background: none;
     border: none;
     position: absolute;
-    top: 11px;
-    right: 16px;
+    top: 9px;
+    right: 12px;
     font-size: $font-size-md;
     line-height: 26px;
     color: $dark-blue;
 
     html[dir="rtl"] & {
-      left: 16px;
+      left: 12px;
       right: auto;
     }
 
@@ -547,13 +557,25 @@ $min-height: 40px;
     }
 
     @include large-and-up {
-      top: 0;
+      top: 8px;
+      right: 16px;
+
+      html[dir="rtl"] & {
+        left: 16px;
+        right: auto;
+      }
     }
   }
 
-  .form-control {
+  input.form-control {
+    height: 40px;
+    border: none;
     border-radius: 0;
     padding: $n5 $n10;
+
+    @include large-and-up {
+      margin-top: 9px;
+    }
   }
 }
 
@@ -607,6 +629,7 @@ $min-height: 40px;
   line-height: 1.5;
   padding: 1.4em 0;
   overflow-y: hidden;
+  top: $navbar-default-height;
 
   html[dir="rtl"] & {
     text-transform: lowercase;
